# anarrima

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yaml
examples/: desc_elliptical_equilibrium.py  desc_elliptical_equilibrium_b_field.csv  nwl_ring_shells.py  nwl_tokamaklike_shells.py  rd_testing.py  rf_testing.py  square_torus.py
src/anarrima/: __init__.py  elliptic.py  ray_cone.py  reduced_integrals.py  visible_angle.py
src/anarrima/elliptic/: carlson.py  elliptic.py  legendre.py
test/: test_elliptic_carlson.py  test_one.py  test_reduced_integrals.py
tests/: test_ellipinc.py  test_elliptic_carlson.py  test_elliptic_legendre.py  test_elliptic_legendre_e.py  test_elliptic_legendre_einc.py  test_elliptic_legendre_f.py  test_elliptic_legendre_finc.py  test_reduced_integrals.py  test_visible_angle.py  utils.py
