[project]
name = "anarrima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacob Schwartz", email = "jacob@jaschwartz.net" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.8.4",
]
