[project]
name = "anarrima"
version = "0.1.0"
description = "Calculate neutron wall loads in axisymmetric geometry"
readme = "README.md"
authors = [
    { name = "Jacob Schwartz", email = "jacob@jaschwartz.net" }
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.5.3",
    "numpy>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "mpmath>=1.3.0",
    "pytest>=8.3.4",
    "scipy>=1.15.2",
]
lint = [
    "ruff>=0.8.4",
]
